Refactoring more stuff out into common includes.

--- a/v2/plays.html
+++ b/v2/plays.html
@@ -10,7 +10,7 @@ title: DID(it) Playbook - Playlist
     <main role="main" class="col-md-9">
       <!-- hero -->
       {% assign hero = site.data.plays.index.hero %}
-      {% include v2/hero.html hero=hero %}
+      {% include v2/content/hero.html hero=hero %}
       <!-- /.hero -->
 
 <!-- .custom-list -->
