--- a/v2/practices.html
+++ b/v2/practices.html
@@ -10,7 +10,7 @@ title: DID(it) Playbook - Practices
     <main role="main" class="col-md-9">
       <!-- hero -->
       {% assign hero = site.data.practices.index.hero %}
-      {% include v2/hero.html hero=hero %}
+      {% include v2/content/hero.html hero=hero %}
       <!-- /.hero -->
 <!-- .custom-list -->
 <section class="mb-5">
