--- a/v2/players.html
+++ b/v2/players.html
@@ -10,11 +10,11 @@ title: DID(it) Playbook - Players
     <main role="main" class="col-md-9">
       <!-- hero -->
       {% assign hero = site.data.players.index.hero %}
-      {% include v2/hero.html hero=hero %}
+      {% include v2/content/hero.html hero=hero %}
       <!-- /.hero -->
       <!-- .tiles -->
       {% assign related = site.data.players.index.roles %}
-      {% include v2/related.html related=related hide_header=true %}
+      {% include v2/content/related.html related=related hide_header=true %}
       <!-- /.tiles -->
     </main>
     <!-- /.main -->
